# erlang-chat-server

./: .server.erl.swp  .supervisor.erl.swp  README.md  client.erl  client.py  server.erl  server_supervisor.erl  supervisor.erl
client/: client.cabal
client/app/: Main.hs
